--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <div>
+        <h1>{{title}}</h1>
+    </div>
+    <div>
+        <app-nav-tab></app-nav-tab>
+    </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
