se adiciona proyecto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-<div class="container">
-    <div>
-        <h1>{{title}}</h1>
-    </div>
-    <div>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h1 class="col-md-offset-3">{{title}}</h1>
         <app-nav-tab></app-nav-tab>
-    </div>
-    <div>
         <router-outlet></router-outlet>
     </div>
 </div>
