--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="small-12 large-offset-3 large-6 columns">
-        <img src="../../assets/images/homeImg.jpg" class="img-responsive" alt="Responsive image" width="300px;" height="400px;" vertical-align="align-middle" horizontal-align="center">
+    <div class="col-md-offset-3">
+        <img src="../../assets/images/4Z68_f-maxage-0.gif" class="img-rounded" alt="Cinque Terre">
     </div>
 </div>
