--- a/src/app/share/nav-tab/nav-tab.component.html
+++ b/src/app/share/nav-tab/nav-tab.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills">
+<ul class="nav nav-tabs nav-justified">
     <li role="presentation" class="{{activeHome}}"><a a [routerLink]="['/home']">Home</a></li>
     <li role="presentation" class="{{activeTeacher}}"><a [routerLink]="['/courses']">Courses</a></li>
     <li role="presentation" class="{{activeHome}}"><a [routerLink]="['/teachers']">Teachers</a></li>
