--- a/src/app/teacher-detail/teacher-detail.component.html
+++ b/src/app/teacher-detail/teacher-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="row">
     <h1>{{teacher.name}}</h1>
     <form (ngSubmit)="onSubmit()" #teacherForm="ngForm">
         <div class="form-group">
