--- a/src/app/course-detail/course-detail.component.html
+++ b/src/app/course-detail/course-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="row">
     <h1>{{course.name}}</h1>
     <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
         <div class="form-group">
@@ -10,9 +10,8 @@
         </div>
         <div class="form-group">
             <label for="startDate">Starting date</label>
-            <div>
-                <date-icon [date]="course.startDate"></date-icon>
-            </div>
+            <date-icon [date]="course.startDate"></date-icon>
+
             <input type="date" class="form-control" id="startDate" name="startDate" [(ngModel)]="course.startDate" required #startDate="ngModel">
             <div [hidden]="startDate.valid || startDate.pristine" class="alert alert-danger">
                 Please select a starting date
