--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-    <div>
+<div class="row">
+    <div class="col-md-offset-3">
         <h2>Yuxi Courses {{fecha | date: 'dd/MM/yyyy'}}</h2>
     </div>
-    <table class="table table-striped" [mfData]="courses" #mf="mfDataTable" [mfRowsOnPage]="3">
+    <table class="table table-striped justify" [mfData]="courses" #mf="mfDataTable" [mfRowsOnPage]="5">
         <thead>
             <tr>
                 <th style="width: 20%">
@@ -17,7 +17,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let course of courses">
+            <tr *ngFor="let course of mf.data">
                 <td>{{course.name}}</td>
                 <td>{{course.hours}}</td>
                 <td colspan="2">{{course.startDate | date: 'dd/MM/yyyy'}}
@@ -38,7 +38,7 @@
         <tfoot>
             <tr>
                 <td colspan="6">
-                    <mfBootstrapPaginator [rowsOnPageSet]="[3,6,9]"></mfBootstrapPaginator>
+                    <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
                 </td>
             </tr>
         </tfoot>
