--- a/src/app/teachers/teachers.component.html
+++ b/src/app/teachers/teachers.component.html
@@ -1,22 +1,22 @@
-<div class="container">
+<div class="row">
     <div>
         <h2>Teachers</h2>
     </div>
-    <table class="table table-striped" [mfData]="teachers" #mf="mfDataTable" [mfRowsOnPage]="3">
+    <table class="table table-striped" [mfData]="teachers" #mf="mfDataTable" [mfRowsOnPage]="5">
         <thead>
             <tr>
                 <th style="width: 20%">
-                    <mfDefaultSorter by="name">Name
-                        <</mfDefaultSorter>/th>
-                            <th style="width: 20%">
-                                <mfDefaultSorter by="lastname">Last Name</mfDefaultSorter>
-                            </th>
-                            <th style="width: 20%">Update</th>
-                            <th style="width: 20%">Delete</th>
+                    <mfDefaultSorter by="name">Name</mfDefaultSorter>
+                </th>
+                <th style="width: 20%">
+                    <mfDefaultSorter by="lastname">Last Name</mfDefaultSorter>
+                </th>
+                <th style="width: 20%">Update</th>
+                <th style="width: 20%">Delete</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let teacher of teachers">
+            <tr *ngFor="let teacher of mf.data">
                 <td>{{teacher.name}}</td>
                 <td>{{teacher.lastName}}</td>
                 <td class="mce-i-aligncenter">
@@ -34,7 +34,7 @@
         <tfoot>
             <tr>
                 <td colspan="4">
-                    <mfBootstrapPaginator [rowsOnPageSet]="[3,6,9]"></mfBootstrapPaginator>
+                    <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
                 </td>
             </tr>
         </tfoot>
