--- a/src/app/teachers/teachers.component.html
+++ b/src/app/teachers/teachers.component.html
@@ -2,7 +2,7 @@
     <div>
         <h2>Teachers</h2>
     </div>
-    <table class="table table-striped" [mfData]="teachers" #mf="mfDataTable" [mfRowsOnPage]="5">
+    <table class="table table-striped" [mfData]="teachers | async" #mf="mfDataTable" [mfRowsOnPage]="5">
         <thead>
             <tr>
                 <th style="width: 20%">
