--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-offset-3">
         <h2>Yuxi Courses {{fecha | date: 'dd/MM/yyyy'}}</h2>
     </div>
-    <table class="table table-striped justify" [mfData]="courses" #mf="mfDataTable" [mfRowsOnPage]="5">
+    <table class="table table-striped justify" [mfData]="courses | async" #mf="mfDataTable" [mfRowsOnPage]="5">
         <thead>
             <tr>
                 <th style="width: 20%">
